--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <footer>
     	<span class="footer__copyright">Except where otherwise noted, content on this site is licensed under a
             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> license</span>
-        <span class="footer__copyright"> The site is created on <a href="https://pages.github.com/">GihHub Pages</a> by using <a href="https://jekyllrb.com">Jekyll</a></span>
+        <span class="footer__copyright"> The site is created on <a href="https://pages.github.com/">GitHub Pages</a> by using <a href="https://jekyllrb.com">Jekyll</a></span>
         <span class="footer__copyright"> Theme: <a href="https://github.com/onevcat/OneV-s-Den"> Vno - Jekyll</a> by <a href="https://onev.cat/">@onevcat</a></span>
     </footer>
 </section>
